// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`it will give failing and running results if specified 1`] = `
[
  {
    "id": "102746",
    "meta": {
      "blame": "doc-orc",
      "link": "https://example.com",
      "timestamp": "2023-11-10T13:06:05.8690139Z",
      "triggerReason": "We jump book.",
      "when": "20 days ago",
    },
    "name": "sleepy-codebase-ng",
    "result": "failed",
  },
  {
    "id": "102747",
    "meta": {
      "blame": "sneezy-elf",
      "link": "https://example.com",
      "timestamp": "2023-11-10T13:06:08.4783945Z",
      "triggerReason": "They jump apple.",
      "when": "20 days ago",
    },
    "name": "fantastic-workspace-for-beginners",
    "result": "failed",
  },
  {
    "id": "102455",
    "meta": {
      "blame": "dopey-hobbit",
      "link": "https://example.com",
      "timestamp": "2023-11-09T14:25:37.3902661Z",
      "triggerReason": "He run book.",
      "when": "21 days ago",
    },
    "name": "awesome-ninja-final-final",
    "result": "failed",
  },
  {
    "id": "106730",
    "meta": {
      "blame": "happy-hobbit",
      "link": "https://example.com",
      "triggerReason": "You sleep car.",
      "when": "now",
    },
    "name": "awesome-ninja",
    "result": "running",
  },
  {
    "id": "106727",
    "meta": {
      "blame": "sleepy-orc",
      "link": "https://example.com",
      "timestamp": "2023-11-30T14:28:56.8787263Z",
      "triggerReason": "We jump car.",
      "when": "6 minutes ago",
    },
    "name": "creative-robot-for-beginners",
    "result": "failed",
  },
  {
    "id": "100919",
    "meta": {
      "blame": "grumpy-orc",
      "link": "https://example.com",
      "timestamp": "2023-10-31T17:29:45.1842892Z",
      "triggerReason": "He eat car.",
      "when": "29 days ago",
    },
    "name": "awesome-dragon-final",
    "result": "failed",
  },
  {
    "id": "106719",
    "meta": {
      "blame": "sneezy-orc",
      "link": "https://example.com",
      "triggerReason": "She run book.",
      "when": "now",
    },
    "name": "techy-repository-beta",
    "result": "running",
  },
  {
    "id": "106721",
    "meta": {
      "blame": "dopey-orc",
      "link": "https://example.com",
      "triggerReason": "We sleep apple.",
      "when": "now",
    },
    "name": "techy-robot-for-beginners",
    "result": "running",
  },
  {
    "id": "106485",
    "meta": {
      "blame": "dopey-dwarf",
      "link": "https://example.com",
      "timestamp": "2023-11-29T13:31:56.8268595Z",
      "triggerReason": "We run apple.",
      "when": "1 day ago",
    },
    "name": "bashful-unicorn-ng",
    "result": "failed",
  },
  {
    "id": "101996",
    "meta": {
      "blame": "sleepy-orc",
      "link": "https://example.com",
      "timestamp": "2023-11-07T13:13:37.5439109Z",
      "triggerReason": "We eat book.",
      "when": "23 days ago",
    },
    "name": "dopey-octocat-final",
    "result": "failed",
  },
  {
    "id": "106469",
    "meta": {
      "blame": "sneezy-hobbit",
      "link": "https://example.com",
      "timestamp": "2023-11-29T13:44:54.8909092Z",
      "triggerReason": "He run book.",
      "when": "1 day ago",
    },
    "name": "techy-ninja-for-beginners",
    "result": "failed",
  },
  {
    "id": "104910",
    "meta": {
      "blame": "grumpy-orc",
      "link": "https://example.com",
      "timestamp": "2023-11-21T13:19:31.0352885Z",
      "triggerReason": "I eat apple.",
      "when": "9 days ago",
    },
    "name": "dopey-repository-beta",
    "result": "failed",
  },
  {
    "id": "105166",
    "meta": {
      "blame": "dopey-dwarf",
      "link": "https://example.com",
      "timestamp": "2023-11-22T10:07:39.0068457Z",
      "triggerReason": "She run apple.",
      "when": "8 days ago",
    },
    "name": "dopey-dragon-v2",
    "result": "failed",
  },
  {
    "id": "106316",
    "meta": {
      "blame": "sleepy-elf",
      "link": "https://example.com",
      "timestamp": "2023-11-29T08:41:55.7954449Z",
      "triggerReason": "They sleep car.",
      "when": "1 day ago",
    },
    "name": "creative-ninja-ng",
    "result": "failed",
  },
  {
    "id": "102173",
    "meta": {
      "blame": "grumpy-orc",
      "link": "https://example.com",
      "timestamp": "2023-11-08T09:50:00.6584206Z",
      "triggerReason": "You run apple.",
      "when": "22 days ago",
    },
    "name": "sneezy-octopus-final-final",
    "result": "failed",
  },
  {
    "id": "106731",
    "meta": {
      "blame": "happy-dwarf",
      "link": "https://example.com",
      "triggerReason": "We eat apple.",
      "when": "now",
    },
    "name": "sleepy-unicorn-plus-plus",
    "result": "running",
  },
  {
    "id": "104462",
    "meta": {
      "blame": "sneezy-orc",
      "link": "https://example.com",
      "timestamp": "2023-11-20T13:33:56.6075473Z",
      "triggerReason": "She eat apple.",
      "when": "10 days ago",
    },
    "name": "awesome-project-for-beginners",
    "result": "failed",
  },
  {
    "id": "104464",
    "meta": {
      "blame": "sleepy-elf",
      "link": "https://example.com",
      "timestamp": "2023-11-20T13:34:35.0285379Z",
      "triggerReason": "He eat apple.",
      "when": "10 days ago",
    },
    "name": "creative-dragon",
    "result": "failed",
  },
  {
    "id": "104465",
    "meta": {
      "blame": "dopey-dwarf",
      "link": "https://example.com",
      "timestamp": "2023-11-20T13:35:29.505735Z",
      "triggerReason": "We sleep apple.",
      "when": "10 days ago",
    },
    "name": "grumpy-repository-ng",
    "result": "failed",
  },
  {
    "id": "104466",
    "meta": {
      "blame": "dopey-elf",
      "link": "https://example.com",
      "timestamp": "2023-11-20T13:39:17.6071824Z",
      "triggerReason": "I sleep car.",
      "when": "10 days ago",
    },
    "name": "bashful-unicorn-v2",
    "result": "failed",
  },
]
`;

exports[`it will give only failing results if nothing else set 1`] = `
[
  {
    "id": "102746",
    "meta": {
      "blame": "doc-orc",
      "link": "https://example.com",
      "timestamp": "2023-11-10T13:06:05.8690139Z",
      "triggerReason": "We jump book.",
      "when": "20 days ago",
    },
    "name": "sleepy-codebase-ng",
    "result": "failed",
  },
  {
    "id": "102747",
    "meta": {
      "blame": "sneezy-elf",
      "link": "https://example.com",
      "timestamp": "2023-11-10T13:06:08.4783945Z",
      "triggerReason": "They jump apple.",
      "when": "20 days ago",
    },
    "name": "fantastic-workspace-for-beginners",
    "result": "failed",
  },
  {
    "id": "102455",
    "meta": {
      "blame": "dopey-hobbit",
      "link": "https://example.com",
      "timestamp": "2023-11-09T14:25:37.3902661Z",
      "triggerReason": "He run book.",
      "when": "21 days ago",
    },
    "name": "awesome-ninja-final-final",
    "result": "failed",
  },
  {
    "id": "106727",
    "meta": {
      "blame": "sleepy-orc",
      "link": "https://example.com",
      "timestamp": "2023-11-30T14:28:56.8787263Z",
      "triggerReason": "We jump car.",
      "when": "6 minutes ago",
    },
    "name": "creative-robot-for-beginners",
    "result": "failed",
  },
  {
    "id": "100919",
    "meta": {
      "blame": "grumpy-orc",
      "link": "https://example.com",
      "timestamp": "2023-10-31T17:29:45.1842892Z",
      "triggerReason": "He eat car.",
      "when": "29 days ago",
    },
    "name": "awesome-dragon-final",
    "result": "failed",
  },
  {
    "id": "106485",
    "meta": {
      "blame": "dopey-dwarf",
      "link": "https://example.com",
      "timestamp": "2023-11-29T13:31:56.8268595Z",
      "triggerReason": "We run apple.",
      "when": "1 day ago",
    },
    "name": "bashful-unicorn-ng",
    "result": "failed",
  },
  {
    "id": "101996",
    "meta": {
      "blame": "sleepy-orc",
      "link": "https://example.com",
      "timestamp": "2023-11-07T13:13:37.5439109Z",
      "triggerReason": "We eat book.",
      "when": "23 days ago",
    },
    "name": "dopey-octocat-final",
    "result": "failed",
  },
  {
    "id": "106469",
    "meta": {
      "blame": "sneezy-hobbit",
      "link": "https://example.com",
      "timestamp": "2023-11-29T13:44:54.8909092Z",
      "triggerReason": "He run book.",
      "when": "1 day ago",
    },
    "name": "techy-ninja-for-beginners",
    "result": "failed",
  },
  {
    "id": "104910",
    "meta": {
      "blame": "grumpy-orc",
      "link": "https://example.com",
      "timestamp": "2023-11-21T13:19:31.0352885Z",
      "triggerReason": "I eat apple.",
      "when": "9 days ago",
    },
    "name": "dopey-repository-beta",
    "result": "failed",
  },
  {
    "id": "105166",
    "meta": {
      "blame": "dopey-dwarf",
      "link": "https://example.com",
      "timestamp": "2023-11-22T10:07:39.0068457Z",
      "triggerReason": "She run apple.",
      "when": "8 days ago",
    },
    "name": "dopey-dragon-v2",
    "result": "failed",
  },
  {
    "id": "106316",
    "meta": {
      "blame": "sleepy-elf",
      "link": "https://example.com",
      "timestamp": "2023-11-29T08:41:55.7954449Z",
      "triggerReason": "They sleep car.",
      "when": "1 day ago",
    },
    "name": "creative-ninja-ng",
    "result": "failed",
  },
  {
    "id": "102173",
    "meta": {
      "blame": "grumpy-orc",
      "link": "https://example.com",
      "timestamp": "2023-11-08T09:50:00.6584206Z",
      "triggerReason": "You run apple.",
      "when": "22 days ago",
    },
    "name": "sneezy-octopus-final-final",
    "result": "failed",
  },
  {
    "id": "104462",
    "meta": {
      "blame": "sneezy-orc",
      "link": "https://example.com",
      "timestamp": "2023-11-20T13:33:56.6075473Z",
      "triggerReason": "She eat apple.",
      "when": "10 days ago",
    },
    "name": "awesome-project-for-beginners",
    "result": "failed",
  },
  {
    "id": "104464",
    "meta": {
      "blame": "sleepy-elf",
      "link": "https://example.com",
      "timestamp": "2023-11-20T13:34:35.0285379Z",
      "triggerReason": "He eat apple.",
      "when": "10 days ago",
    },
    "name": "creative-dragon",
    "result": "failed",
  },
  {
    "id": "104465",
    "meta": {
      "blame": "dopey-dwarf",
      "link": "https://example.com",
      "timestamp": "2023-11-20T13:35:29.505735Z",
      "triggerReason": "We sleep apple.",
      "when": "10 days ago",
    },
    "name": "grumpy-repository-ng",
    "result": "failed",
  },
  {
    "id": "104466",
    "meta": {
      "blame": "dopey-elf",
      "link": "https://example.com",
      "timestamp": "2023-11-20T13:39:17.6071824Z",
      "triggerReason": "I sleep car.",
      "when": "10 days ago",
    },
    "name": "bashful-unicorn-v2",
    "result": "failed",
  },
]
`;
